<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">Schedule</string>
    <string name="exit_dialog_title">종료</string>
    <string name="exit_dialog_message">앱을 종료하시겠습니까?</string>
    <string name="exit_dialog_yes">예</string>
    <string name="exit_dialog_no">아니오</string>

    <string name="input_student_number_hint">학번</string>
    <string name="input_pw_hint">비밀번호</string>
    <string name="input_dept_name_hint">학과</string>
    <string name="input_major_hint">전공</string>
    <string name="input_name_hint">이름</string>
    <string name="input_grade_hint">학년</string>
    <string name="btn_login_text">L O G I N</string>
    <string name="btn_join_text">J O I N</string>

    <string name="error_empty_on_login">아이디와 비밀번호를 모두 입력하세요.</string>
    <string name="error_empty_on_join">모든 정보를 입력하세요.</string>
    <string name="login_fail">로그인 실패</string>
    <string name="id_not_exist">존재하지 않는 아이디입니다.</string>
    <string name="join_success">회원가입 성공</string>
    <string name="id_exist">이미 존재하는 아이디입니다.</string>
    <string name="join_fail">회원가입 실패</string>

    <string name="std_info">학생 정보</string>
    <string name="std_dept_name">학과</string>
    <string name="std_major">전공</string>
    <string name="std_name">이름</string>
    <string name="std_number">학번</string>
    <string name="today_timetable">오늘의 시간표</string>

    <string name="btn_show_timetable">시간표 보기</string>
    <string name="btn_select_timetable">시간표 선택</string>

    <string name="header_text">시간표</string>
    <string name="btn_save_text">저장</string>
    <string name="btn_add_text">시간표에 추가</string>
    <string name="btn_delete_text">삭제</string>

    <string name="classroom">강의실</string>
    <string name="result_not_found">검색 결과가 없습니다.</string>

</resources>