<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/inputStudentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:autofillHints="@string/input_student_number_hint"
            android:hint="@string/input_student_number_hint"
            android:inputType="text"
            android:maxLength="10"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:autofillHints="@string/input_pw_hint"
            android:hint="@string/input_pw_hint"
            android:inputType="textPassword"
            android:maxLength="10" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F8D336"
            android:text="@string/btn_login_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textBtnJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_join_text"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>